--- a/style.css
+++ b/style.css
@@ -82,6 +82,8 @@ p{
 }
 .full:hover{
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
+    background-color: black;
+    color: red;
 }
 /*skillset skill sec*/
 .skillset{
