--- a/style.css
+++ b/style.css
@@ -163,4 +163,10 @@ p{
         height: 140px;
     }
 }
+#type{
+    border-right: 2px solid #000;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 24px;
+}
    
