--- a/style.css
+++ b/style.css
@@ -82,6 +82,9 @@ p{
 }
 .full:hover{
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
+    transition: 2s;
+    background-color: black;
+    color: white;
 }
 /*skillset skill sec*/
 .skillset{
